# Montecarlo-Bellini-Simei-Tramacere

./: .gitignore  CMakeLists.txt  Geometry.hpp  HyperSphere.cpp  HyperSphere.hpp  MCintegration_with_user_data.hpp  Makefile  NVDA.csv  README.md  input_manager.cpp  main  main.cpp  mc_integrator.cpp  mc_integrator.hpp  nD_sphere_MCintegration.hpp  notes.md  semicircle_MCintegration.hpp  sphere_volume.hpp
CUDA/: CMakeLists.txt  mainCUDA.cpp  optionpricer.cu
buildCUDA/: mainCUDA  output.txt
copy_23_05_2024/buildCUDA/: output.txt
copy_23_05_2024/include/muparser-2.3.4/src/: muParserBase.cpp  muParserTest.cpp
copy_23_05_2024/include/project/: hypercube.hpp  hypersphere.hpp  integrationcomputation.hpp
copy_23_05_2024/src/: financemontecarlo.cpp  hypersphere.cpp  optionpricer.cu
copy_23_05_2024/utils/: financecomputation.cpp  integrationcomputation.cpp
data/: IONQ.csv
data/all_assets/: AAPL5y.csv  AMD.csv  AMZN5y.csv  ENI5y.csv  NVDA.csv  TSLA5y.csv
data/choose_one/: GOOG5y.csv  RACE.MI.csv
data/multi_asset/: AAPL.csv  GOOG.csv
include/: inputmanager.hpp
include/integration/: functionevaluator.hpp  integralcalculator.hpp  montecarlo.hpp
include/integration/geometry/: geometry.hpp  hypercube.hpp  hyperrectangle.hpp  hypersphere.hpp
include/muparser-2.3.4/src/: muParser.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserError.cpp  muParserInt.cpp  muParserTokenReader.cpp
include/optionpricing/: asset.hpp  finance_enums.hpp  finance_inputmanager.hpp  finance_montecarlo.hpp  finance_montecarloutils.hpp  finance_pricingutils.hpp  optionparameters.hpp  optionpricer.hpp
include/project/: asset.hpp  csvhandler.hpp  finance_computation.hpp  finance_inputmanager.hpp  finance_montecarlo.hpp  financecomputation.hpp  financemontecarlo.hpp  functionevaluator.hpp  geometry.hpp  hypercube.hpp  hyperrectangle.hpp  hypersphere.hpp  input_manager.hpp  inputmanager.hpp  integralcalculator.hpp  integrationcomputation.hpp  montecarlo.hpp  montecarlointegrator.hpp  optionparameters.hpp  optionpricing.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
src/: CMakeLists.txt  Geometry.hpp  HyperSphere.cpp  Makefile  MonteCarlo.cpp  MonteCarlo.hpp  asset.cpp  csvhandler.cpp  finance_montecarlo.cpp  financemontecarlo.cpp  functionevaluator.cpp  hypercube.cpp  hyperrectangle.cpp  hypersphere.cpp  input_manager.cpp  input_manager.hpp  inputmanager.cpp  integralcalculator.cpp  main.cpp  mainCUDA.cpp  montecarlo.cpp  montecarlointegrator.cpp  optionparameters.cpp  optionpricer.cu  optionpricer_convaloridinamici.cu  optionpricing.cpp
src/finance/: finance_inputmanager.cpp  finance_montecarlo.cpp  optionparameters.cpp  optionpricer.cpp
src/integration/: functionevaluator.cpp  integralcalculator.cpp
src/integration/geometry/: hypercube.cpp  hyperrectangle.cpp  hypersphere.cpp
src/optionpricing/: finance_inputmanager.cpp  finance_montecarlo.cpp  finance_montecarloutils.cpp  finance_pricingutils.cpp  optionparameters.cpp  optionpricer.cpp
utils/: finance_computation.cpp  finance_inputmanager.cpp  financecomputation.cpp  financeinputmanager.cpp  functionevaluator.cpp  inputmanager.cpp  integrationcomputation.cpp  optionpracing2.py  optionpricing.py
